[package]
name = "apple-utils"
authors = ["Manuel Adameit"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/maun/apple-utils"
description = "Utilities for interacting with Apple platforms"
categories = ["api-bindings"]
keywords = ["apple", "ios", "macos"]
readme = "README.md"
edition = "2024"
version = "0.1.0"

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.6.0"
objc2-foundation = { version = "0.3.0", features = ["NSString"] }
objc2-ui-kit = { version = "0.3.0", features = [
    "objc2-uniform-type-identifiers",
] }
objc2-uniform-type-identifiers = "0.3.0"
tokio = { version = "1.44.1", default-features = false, features = ["sync"] }